--- a/style/style.css
+++ b/style/style.css
@@ -48,13 +48,12 @@
     font-family: var(--font-titulo);
     font-size: 5em;
     color:var(--cor5);
-    margin: 0;
+    margin-bottom:10px;
     text-shadow: 2px 2px 2px rgba(230, 225, 225, 0.21);
 }
 
 header p{
     color: var(--cor5);
-    margin: auto;
     font-weight: bold;
     font-family:var(--fonte-subtitulo);
     padding-left: 40px;
