--- a/style/style.css
+++ b/style/style.css
@@ -49,6 +49,8 @@
     font-size: 4em;
     color:var(--cor5);
     margin-bottom:10px;
+    margin-left: 10px;
+    margin-right: 10px;
     text-shadow: 2px 2px 2px rgba(230, 225, 225, 0.21);
 }
 
