--- a/style/style.css
+++ b/style/style.css
@@ -38,20 +38,18 @@
  
  header{
     background-image:linear-gradient(to top,#7c9a8d 10%, var(--cor1));
-    min-height:200px;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 20px;
     
  }
 
  header h1{
     font-family: var(--font-titulo);
-    font-size: 4em;
+    font-size: 5em;
     color:var(--cor5);
     margin-bottom:10px;
-    margin-left: 10px;
-    margin-right: 10px;
     text-shadow: 2px 2px 2px rgba(230, 225, 225, 0.21);
+    display: inline-block;
 }
 
 header p{
